# oiflib

./: .flake8  .gitignore  .pre-commit-config.yaml  .python-version  .readthedocs.yml  LICENSE  LICENSE.md  README.md  air.ipynb  mypy.ini  noxfile.py  pyproject.toml  setup.sh
.github/workflows/: ci.yml  docs.yml  python-package.yml
data/: datasets.json  schema.pkl  schema.py
data/air/six/: Table 2.4: Nitrogen-sensitive habitat area and percentage area of habitats where nutrient nitrogen critical loads are exceeded, by country and deposition dataset year.csv
data/air/two/: _lookup.py  lookup.csv
docs/: conf.py  index.rst  modules.rst  oiflib.air.rst
docs/source/: air.ipynb  api.rst  conf.py  development.rst  index.rst  installation.rst  modules.rst  oiflib.air.five.rst  oiflib.air.four.rst  oiflib.air.one.rst  oiflib.air.seven.rst  oiflib.air.six.rst  oiflib.air.three.rst  oiflib.air.two.rst  oiflib.rst  requirements.txt  structure.rst  usage.rst
src/oiflib/: __init__.py  _core_pyspark.py  _helper.py  air.ipynb  core.py  datasets.py  extract.py  format.py  format_and_push.py  io.py  metadata.py  push.py  schema.py  testing.py  validate.py
src/oiflib/air/: __init__.py  air.ipynb  one.py
src/oiflib/air/five/: __init__.py  enrich.py  schema.py  transform.py  validate.py
src/oiflib/air/four/: __init__.py  enrich.py  extract.py  get.py  schema.py  transform.py  validate.py
src/oiflib/air/one/: __init__.py  _transform_pyspark.py  air_one.ipynb  enrich.py  extract.py  get.py  schemas.py  transform.py  validate.py
src/oiflib/air/seven/: schema.py  transform.py
src/oiflib/air/six/: __init__.py  enrich.py  schema.py  transform.py  validate.py
src/oiflib/air/three/: __init__.py  air_three.ipynb  enrich.py  extract.py  get.py  schemas.py  transform.py  validate.py
src/oiflib/air/two/: __init__.py  _transform_pyspark.py  enrich.py  get.py  schemas.py  transform.py  validate.py
tests/: __init__.py  configtest.py  conftest.py  fixtures.py  test__core_pyspark.py  test__helper.py  test_core.py  test_extract.py  test_format.py  test_oiflib.py  test_push.py  test_testing.py  test_upload.py  test_upload_cases.py  test_validate.py
tests/air/: __init__.py  test_one.py
tests/air/five/: __init__.py  conftest.py  test_enrich.py
tests/air/four/: __init__py  conftest.py  test_enrich.py  test_validate.py
tests/air/one/: __init__.py  test__transform_pyspark.py  test_enrich.py  test_transform.py
tests/air/seven/: __init__.py
tests/air/six/: conftest.py  test_transform.py
tests/air/three/: conftest.py  test_extract.py  test_transform.py
tests/air/two/: __init__.py  conftest.py  test_enrich.py  test_schemas.py  test_transform.py  test_validate.py
