[tool.poetry]
name = "oiflib"
version = "0.1.0"
description = "OIF-related python libraries"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Defra-Data-Science-Centre-of-Excellence/oiflib"
repository = "https://github.com/Defra-Data-Science-Centre-of-Excellence/oiflib"
authors = ["Ed Fawcett-Taylor <ed.fawcett-taylor@defra.gov.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
pyspark = "^3.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
mypy = "^0.790"
coverage = {extras = ["toml"], version = "^5.3.1"}
pytest-cov = "^2.10.1"
flake8 = "^3.8.4"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["oiflib"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
