[tool.poetry]
name = "oiflib"
version = "0.1.0"
description = "OIF-related python libraries"
license = "MIT"
readme = "README.md"
documentation = "https://oiflib.readthedocs.io"
repository = "https://github.com/Defra-Data-Science-Centre-of-Excellence/oiflib"
authors = ["Ed Fawcett-Taylor <ed.fawcett-taylor@defra.gov.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.0"
openpyxl = "^3.0.6"
pandera = "^0.6.1"
odfpy = "^1.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
mypy = "^0.790"
coverage = {extras = ["toml"], version = "^5.3.1"}
pytest-cov = "^2.10.1"
flake8 = "^3.8.4"
flake8-black = "^0.2.1"
flake8-isort = "^4.0.0"
flake8-bugbear = "^20.11.1"
flake8-bandit = "^2.1.2"
flake8-annotations = "^2.5.0"
flake8-docstrings = "^1.5.0"
darglint = "^1.5.8"
Sphinx = "^3.4.2"
isort = "^5.7.0"
pre-commit = "^2.9.3"
hypothesis = "^6.0.3"
sphinx-rtd-theme = "^0.5.1"
nbsphinx = "^0.8.1"
recommonmark = "^0.7.1"
nox = "^2020.12.31"
jupyter = "^1.0.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["oiflib"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.isort]
profile = "hug"
src_paths = ["src", "test"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
